# bin2c

./: .clang-format  CMakeLists.txt  README.md  main.c
